# juliatto_dev

./: CLAUDE.md  Cargo.toml  config.toml  docker-compose.yml
.hooks/: pre-push
builder/: Cargo.toml
builder/src/: main.rs
sender/: Cargo.toml
sender/src/: main.rs
server/: Cargo.toml
server/src/: config.rs  http.rs  main.rs  observability.rs
server/src/ports/http/: mod.rs  trace.rs
