[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
regex = "1.11.1"
